--- a/src/layout/stockinfo/stockInfo.css
+++ b/src/layout/stockinfo/stockInfo.css
@@ -3,6 +3,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
+    margin-top: -15%;
+    font-size: 20px;
 }
 
 .stock-info-container .stock-info-container__result {
