--- a/src/layout/moai/moai.css
+++ b/src/layout/moai/moai.css
@@ -13,7 +13,7 @@ p.moai-container__thought {
     background-color: #fff;
     padding: 20px;
     border-radius: 16px;
-    box-shadow:	0 0 3px rgba(0, 0, 0, .3);
+    box-shadow:	0 0 3px rgba(0, 0, 0, 1);
 }
 
 p.moai-container__thought::before {
@@ -25,7 +25,7 @@ p.moai-container__thought::before {
     border: 12px solid transparent;
     border-bottom: none;
     border-top-color: #fff;
-    filter: drop-shadow(0 2px 1px rgba(0, 0, 0, .1));
+    filter: drop-shadow(0 2px 1px rgba(0, 0, 0, .4));
 }
 
 .moai-container__ebalo {
